# c-lightning-pruning-plugin

./: Cargo.toml  README.md
src/: async_io.rs  init_info.rs  main.rs  pruning.rs  rpc.rs  stdio.rs
