[package]
name = "c-lightning-pruning-plugin"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.2"
failure = "0.1.7"
log = "0.4.8"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
simple-logging = "2.0"
tokio = { version = "0.2.13", features = ["full"] }
url = "2.1.1"