[package]
name = "c-lightning-pruning-plugin"
version = "0.1.1"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
description = "A plugin for c-lightning that manages pruning of bitcoind such that it can always sync."
license = "MIT"
repository = "https://github.com/Start9Labs/c-lightning-pruning-plugin"
documentation = "https://docs.rs/c-lightning-pruning-plugin"
readme = "README.md"

[dependencies]
crossbeam-channel = "0.4.3"
failure = "0.1.8"
log = "0.4.11"
reqwest = { version = "0.10.7", features = ["json", "socks"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
simple-logging = "2.0"
tokio = { version = "0.2.22", features = ["full"] }
url = "2.1.1"